--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Repiano</title>
+  <title>Repiano App</title>
 </head>
 <body>
   <div id="app"></div>
