--- a/indexProduction.html
+++ b/indexProduction.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ReasonReact Examples</title>
+  <title>Repiano App</title>
 </head>
 <body>
+  <div id="app"></div>
   <script src="./index.js"></script>
 </body>
 </html>
